# cvar-leximin-fair

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: lint.yml  release.yml  test.yml
examples/: adult_income.ipynb
paper/: README.md  main.tex  references.bib
scripts/: release-to-pypi.sh
src/cvar_leximin/: __init__.py  fairlearn_compat.py  metrics.py  reductions.py
tests/: conftest.py  test_fairlearn_compat.py  test_metrics.py  test_reductions.py
