[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "cvar-leximin-fair"
version = "0.1.0"
description = "Rawlsian fairness via CVaR / leximin reductions for fairlearn"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "hinanohart", email = "runzaisongpu95@gmail.com" }
]
keywords = ["fairness", "fairlearn", "cvar", "leximin", "rawls", "ml"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.11",
  "scikit-learn>=1.4",
  "fairlearn>=0.10",
  "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "pytest-cov>=4",
  "ruff>=0.4",
  "mypy>=1.8",
  "pip-licenses>=4",
]
example = [
  "jupyter>=1",
  "papermill>=2.5",
  "matplotlib>=3.8",
]

[project.urls]
Homepage = "https://github.com/hinanohart/cvar-leximin-fair"
Repository = "https://github.com/hinanohart/cvar-leximin-fair"
Issues = "https://github.com/hinanohart/cvar-leximin-fair/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/cvar_leximin"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["paper", "examples/*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.mypy]
python_version = "3.10"
strict_optional = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --tb=short"
